Ec 585 (#273)
* Ignore request modifier msg during sync, avoid sending inv msg during sync

* Increase delivery timeout interval

* Dummy

* Disable opportunity to request modifiers from peer with younger history

* Ignore sending ext during sync

* Don't ask for modifiers peer with younger history from expect(), reexpect()

* Code cleanup

* Change GC

* Code cleanup

* Dummy